<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="toggle"
        android:enabled="true"
        android:icon="@drawable/ic_volume_up"
        android:shortcutShortLabel="@string/shortcut_toggle_short"
        android:shortcutLongLabel="@string/shortcut_toggle_long">
        <intent
            android:action="io.github.shhhapp.shhh.action.TOGGLE"
            android:targetPackage="io.github.shhhapp.shhh"
            android:targetClass="io.github.shhhapp.shhh.ToggleActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="hush_30"
        android:enabled="true"
        android:icon="@drawable/ic_vibration"
        android:shortcutShortLabel="@string/shortcut_hush30_short"
        android:shortcutLongLabel="@string/shortcut_hush30_long">
        <intent
            android:action="io.github.shhhapp.shhh.action.HUSH"
            android:targetPackage="io.github.shhhapp.shhh"
            android:targetClass="io.github.shhhapp.shhh.ToggleActivity">
            <extra
                android:name="duration_minutes"
                android:value="30" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="hush_60"
        android:enabled="true"
        android:icon="@drawable/ic_vibration"
        android:shortcutShortLabel="@string/shortcut_hush60_short"
        android:shortcutLongLabel="@string/shortcut_hush60_long">
        <intent
            android:action="io.github.shhhapp.shhh.action.HUSH"
            android:targetPackage="io.github.shhhapp.shhh"
            android:targetClass="io.github.shhhapp.shhh.ToggleActivity">
            <extra
                android:name="duration_minutes"
                android:value="60" />
        </intent>
    </shortcut>
</shortcuts>
